cargo-features = ["codegen-backend"]

[workspace]
members = [
    "assyst-cache",
    "assyst-common",
    "assyst-core",
    "assyst-database",
    "assyst-flux-iface",
    "assyst-gateway",
    "assyst-proc-macro",
    "assyst-string-fmt",
    "assyst-tag",
    "assyst-webserver",
]
exclude = ["flux"]
resolver = "2"

[workspace.lints.clippy]
uninlined_format_args = "warn"
redundant_clone = "warn"

[workspace.dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.123", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.37"
twilight-gateway = { git = "https://github.com/twilight-rs/twilight" }
twilight-http = { git = "https://github.com/twilight-rs/twilight" }
twilight-model = { git = "https://github.com/twilight-rs/twilight" }
twilight-util = { git = "https://github.com/twilight-rs/twilight", features = [
    "builder",
] }
