cargo-features = ["codegen-backend"]

[workspace]
members = [
    "assyst-cache",
    "assyst-common",
    "assyst-core",
    "assyst-database",
    "assyst-flux-iface",
    "assyst-gateway",
    "assyst-proc-macro",
    "assyst-string-fmt",
    "assyst-tag",
    "assyst-webserver",
]
exclude = ["flux"]
resolver = "2"

[workspace.lints.clippy]
uninlined_format_args = "warn"
redundant_clone = "warn"
too_long_first_doc_paragraph = "allow"

[workspace.dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.123", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.37"
twilight-gateway = { version = "0.17.0" } #{ git = "https://github.com/twilight-rs/twilight" }
twilight-http = { version = "0.17.0" } #{ git = "https://github.com/twilight-rs/twilight" }
twilight-model = { version = "0.17.0" } #{ git = "https://github.com/twilight-rs/twilight" }
twilight-util = { version = "0.17.0", features = [ #{ git = "https://github.com/twilight-rs/twilight", features = [
    "builder",
] }
