[package]
name = "assyst-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.37"
assyst-common = { path = "../assyst-common" }
dashmap = "5.5.3"
twilight-model = "=0.16.0-rc.1"
rustc-hash = "1.1.0"
