[package]
name = "assyst-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
assyst-common = { path = "../assyst-common" }
dashmap = "5.5.3"
rustc-hash = "1.1.0"

[lints]
workspace = true
