[package]
name = "assyst-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
serde = "1.0.193"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
lazy_static = "1.4.0"
tracing = "0.1.37"
assyst-database = { path = "../assyst-database" }
twilight-http = { git = "https://github.com/Jacherr/twilight.git", branch = "main" }
twilight-model = { git = "https://github.com/Jacherr/twilight.git", branch = "main" }
