[package]
name = "assyst-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.37"
assyst-common = { path = "../assyst-common" }
assyst-database = { path = "../assyst-database" }
assyst-webserver = { path = "../assyst-webserver" }
twilight-gateway = "=0.16.0-rc.1"
twilight-model = "=0.16.0-rc.1"
twilight-http = "=0.16.0-rc.1"
anyhow = "1.0.75"
jemallocator = "0.5.4"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
time = { version = "0.3.31", features = ["macros"] }
prometheus = "0.13.3"
lazy_static = "1.4.0"
async-trait = "0.1.77"
assyst-proc-macro = { path = "../assyst-proc-macro" }
bytes = "1.5.0"
serde = "1.0.196"
reqwest = { version = "0.11.24", features = ["json", "stream", "multipart"] }
emoji = { git = "https://github.com/Jacherr/emoji-rs/", package = "emoji" }
url = "2.5.0"
futures-util = "0.3.30"
serde_json = "1.0.113"
moka = { version = "0.12.3", features = ["sync"] }
human_bytes = { version = "0.4", default-features = false }
bincode = "1.3.3"
paste = "1.0.14"
rand = "0.8.5"
assyst-tag = { path = "../assyst-tag" }
urlencoding = "2.1.3"
twilight-util = { version = "=0.16.0-rc.1", features = ["builder"] }
dash_vm = { git = "https://github.com/y21/dash" }
dash_rt = { git = "https://github.com/y21/dash" }
