[package]
name = "assyst-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assyst-common = { path = "../assyst-common" }
assyst-database = { path = "../assyst-database" }
assyst-flux-iface = { path = "../assyst-flux-iface" }
assyst-proc-macro = { path = "../assyst-proc-macro" }
assyst-tag = { path = "../assyst-tag" }
assyst-webserver = { path = "../assyst-webserver" }
async-trait = "0.1.77"
bincode = "1.3.3"
bytes = "1.5.0"
dash_rt = { git = "https://github.com/y21/dash" }
dash_vm = { git = "https://github.com/y21/dash" }
emoji = { git = "https://github.com/Jacherr/emoji-rs/", package = "emoji" }
futures-util = "0.3.30"
human_bytes = { version = "0.4", default-features = false }
jemallocator = "0.5.4"
lazy_static = "1.4.0"
libc = "0.2.155"
moka = { version = "0.12.3", features = ["sync"] }
num_cpus = "1.16.0"
paste = "1.0.14"
prometheus = "0.13.3"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json", "stream", "multipart"] }
serde = "1.0.196"
serde_json = "1.0.113"
time = { version = "0.3.31", features = ["macros"] }
tl = "0.7.8"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
twilight-gateway = "=0.16.0-rc.1"
twilight-http = "=0.16.0-rc.1"
twilight-model = "=0.16.0-rc.1"
twilight-util = { version = "=0.16.0-rc.1", features = ["builder"] }
url = "2.5.0"
urlencoding = "2.1.3"
zip = "2.1.4"

[lints]
workspace = true
