[package]
name = "assyst-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.0", features = ["full"] }
twilight-model = "=0.16.0-rc.1"
serde = { version = "1.0.123", features = ["derive"] }
moka = { version = "0.12.3", features = ["sync"] }
anyhow = "1.0.75"
tracing = "0.1.37"
