[package]
name = "assyst-database"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
tokio = { workspace = true }
twilight-model = { workspace = true }
serde = { workspace = true }
moka = { version = "0.12.3", features = ["sync"] }
anyhow = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
