[package]
name = "assyst-flux-iface"
version = "0.1.0"
edition = "2021"

[dependencies]
assyst-common = { path = "../assyst-common" }
assyst-database = { path = "../assyst-database" }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
libc = "0.2.155"
serde = "1.0.193"
serde_json = "1.0.121"

[lints]
workspace = true
