[package]
name = "assyst-flux-iface"
version = "0.1.0"
edition = "2024"

[dependencies]
assyst-common = { path = "../assyst-common" }
assyst-database = { path = "../assyst-database" }
tokio = { workspace = true }
anyhow = { workspace = true }
libc = "0.2.155"
serde = { workspace = true }
serde_json = "1.0.121"

[lints]
workspace = true
