[package]
name = "assyst-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assyst-common = { path = "../assyst-common" }
futures-util = "0.3.29"
lazy_static = "1.4.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twilight-gateway = { git = "https://github.com/Jacherr/twilight.git", branch = "main" }
twilight-model = { git = "https://github.com/Jacherr/twilight.git", branch = "main" }
twilight-http = { git = "https://github.com/Jacherr/twilight.git", branch = "main" }