[package]
name = "assyst-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = { version = "=0.16.0-rc.1", features = ["twilight-http"] }
anyhow = "1.0.75"
assyst-common = { path = "../assyst-common" }
assyst-database = { path = "../assyst-database" }
futures-util = "0.3.29"
lazy_static = "1.4.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
time = { version = "0.3.31", features = ["macros"] }
twilight-model = "=0.16.0-rc.1"
twilight-http = "=0.16.0-rc.1"
jemallocator = "0.5.4"
