[package]
name = "assyst-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = { workspace = true }
anyhow = { workspace = true }
assyst-common = { path = "../assyst-common" }
assyst-database = { path = "../assyst-database" }
futures-util = "0.3.29"
lazy_static = "1.4.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
time = { version = "0.3.31", features = ["macros"] }
twilight-model = { workspace = true }
twilight-http = { workspace = true }
jemallocator = "0.5.4"

[lints]
workspace = true
