[package]
name = "assyst-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-macros = { version = "0.3.0-rc.3" }
axum = { version = "0.7.4", features = ["macros"] }
assyst-common = { path = "../assyst-common" }
assyst-database = { path = "../assyst-database" }
tokio = { version = "1.34.0", features = ["full"] }
twilight-model = { git = "https://github.com/Jacherr/twilight.git", branch = "main" }
twilight-http = { git = "https://github.com/Jacherr/twilight.git", branch = "main" }
tracing = "0.1.37"
prometheus = "0.13.3"
serde = "1.0.196"
lazy_static = "1.4.0"
anyhow = "1.0.75"
