[package]
name = "assyst-webserver"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-macros = { version = "0.3.0-rc.3" }
axum = { version = "0.7.4", features = ["macros"] }
assyst-common = { path = "../assyst-common" }
assyst-database = { path = "../assyst-database" }
tokio = { workspace = true }
twilight-model = { workspace = true }
twilight-http = { workspace = true }
tracing = { workspace = true }
prometheus = "0.13.3"
serde = { workspace = true }
lazy_static = "1.4.0"
anyhow = { workspace = true }

[lints]
workspace = true
